feat: initial template of SAP HCP Connector docker
Dockerfile to run the SAP HANA Cloud Platform connector